Adding write-up

--- a/README.html
+++ b/README.html
@@ -354,7 +354,7 @@ display: none;
 
 <div id="analyzing-squirrel-behavior-in-central-park" class="section level1">
 <h1>Analyzing squirrel behavior in Central Park</h1>
-<p>by Team name</p>
+<p>by Cate, Dillon, and Tomas</p>
 <div id="summary" class="section level2">
 <h2>Summary</h2>
 <p>Write-up of your project and findings go here. Think of this as the
@@ -364,6 +364,9 @@ words.</p>
 <p>Your results with proper output and graphics go in your handout, this
 space is for a brief summary of your project.</p>
 </div>
+</div>
+<div id="section" class="section level1">
+<h1></h1>
 <div id="handout" class="section level2">
 <h2>Handout</h2>
 <p>Our handout can be found <a href="handout/handout.pdf">here</a>.</p>
@@ -371,7 +374,7 @@ space is for a brief summary of your project.</p>
 <div id="memo" class="section level2">
 <h2>Memo</h2>
 <p>A link to the code and how we created our graphics in our memo can be
-found <a href="memo/memo.Rmd">here</a>.</p>
+found <a href="memo/memo.md">here</a>.</p>
 </div>
 <div id="data" class="section level2">
 <h2>Data</h2>
